feat(config): share EmbeddingModelRegistry in directml-config; filter Workbench embed dropdown by useCase=embedding
Agent-Logs-Url: https://github.com/aresstack/win-directml-java/sessions/cb8330e7-be33-4e24-bb06-42c586fc8afe

Co-authored-by: Miguel0888 <40050873+Miguel0888@users.noreply.github.com>